crates/plotnik-lib/tests/02-parser/recovery_unclosed/unclosed_double_quote_string.txt
(call "foo)
==== diagnostics ====
error: unterminated string
 --> query.ptk:1:7
  |
1 | (call "foo)
  |       ^^^^^
  |
help: anonymous nodes match literal tokens; close the quote: `"foo"`
